--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/washix78/mogura#readme",
   "devDependencies": {
     "config": "^1.30.0",
+    "dateformat": "^3.0.3",
     "eslint": "^4.19.1",
     "log4js": "^2.8.0",
     "md5-file": "^4.0.0"
