--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "config": "^1.31.0",
+    "cryptiles": ">=4.1.2",
     "dateformat": "^3.0.3",
     "log4js": "^2.11.0",
     "md5-file": "^4.0.0",
