--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "config": "^1.31.0",
     "cryptiles": ">=4.1.2",
     "dateformat": "^3.0.3",
+    "hoek": ">=4.2.1",
     "log4js": "^2.11.0",
     "md5-file": "^4.0.0",
     "unzip": "^0.1.11"
