--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "fs-extra": "^10.0.0"
+  },
+  "dependencies": {
+    "image-size": "^1.0.0"
   }
 }
